[1.12.30.1] NFM resource